--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <form action="/login" method="post">
     <div>
-      <label for="username">Username:</label>
+      <label for="username">Username:739084723908473290847398243</label>
       <input id="username" type="text" name="username">
     </div>
     <div>
