live repo working

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <form action="/login" method="post">
     <div>
-      <label for="username">Username:187341287361287637821631827361287268736781</label>
+      <label for="username">Username:</label>
       <input id="username" type="text" name="username">
     </div>
     <div>
